# HackathonMicrosoftNov2025

./: .gitignore  CICD.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  QUICK_REFERENCE.md  README.md  agro_helpdesk.db  cleanup.ps1  deploy-frontend.ps1  deploy.ps1  fix-deployment-issues.ps1  implementation_plan.md  setup-github-secrets.ps1  task.md
AgroHelpDesk/backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
AgroHelpDesk/backend/app/: main.py
AgroHelpDesk/backend/app/agents/: agro_brain.py  explain_it.py  farm_ops.py  field_sense.py  runbook_master.py
AgroHelpDesk/backend/app/api/: acs_webhook.py  chat.py  orchestrator.py
AgroHelpDesk/backend/app/config/: __init__.py  agent_config.py  kernel_config.py  keyvault.py  settings.py
AgroHelpDesk/backend/app/core/: automation.py  context_builder.py  orchestrator.py  search.py  sk_base_agent.py
AgroHelpDesk/backend/app/plugins/: __init__.py  azure_search_plugin.py  runbook_plugin.py  work_order_plugin.py
AgroHelpDesk/backend/app/schemas/: __init__.py  llm_responses.py  orchestrator_schemas.py
AgroHelpDesk/backend/app/services/: __init__.py  acs_identity.py  acs_messages.py  acs_threads.py  session_store.py
AgroHelpDesk/backend/app/utils/: json_parser.py  logger.py  query_builders.py  response_builders.py
backend/: .flake8  .gitignore  README.md  agro_helpdesk.db  database.py  function_app.py  init_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
dataset/: agrofitprodutostecnicos.csv  basedeconhecimentoMAPA.csv  sipeagrofertilizante.csv  sipeagroqualidadevegetal.csv
docs/: ACS_SETUP.md
infrastructure/: README.md  config.json  create_search_index.py  deploy_resources.ps1  index_documents.py  requirements.txt  (+5 more)
(+137 files in other folders)
